--- a/index.html
+++ b/index.html
@@ -1,25 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Roulette</title>
-</head>
+  </head>
 
-<body>
-    <header>
+  <body>
+    <header></header>
 
-    </header>
+    <main></main>
 
-    <main>
+    <footer></footer>
 
-    </main>
-
-    <footer>
-        
-    </footer>
-
-</body>
-
+    <script src="./index.js"></script>
+  </body>
 </html>
